--- a/src/Less.WebApi/appsettings.json
+++ b/src/Less.WebApi/appsettings.json
@@ -15,7 +15,8 @@
         "Name": "File",
         "Args": {
           "path": "./logs/log-.txt",
-          "rollingInterval": "Day"
+          "rollingInterval": "Day",
+          "rollOnFileSizeLimit": true
         }
       }
     ]
