add repository wrapper

--- a/src/Less.WebApi/Less.WebApi.csproj
+++ b/src/Less.WebApi/Less.WebApi.csproj
@@ -7,8 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.7" />
     <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Less.DalCore\Less.DalCore.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="TestDb\" />
   </ItemGroup>
 
 </Project>
