--- a/src/Less.WebApi/appsettings.json
+++ b/src/Less.WebApi/appsettings.json
@@ -7,6 +7,7 @@
       "Override": {
         "Microsoft.AspNetCore.Mvc": "Warning",
         "Microsoft.AspNetCore.Routing": "Warning",
+        "Microsoft.AspNetCore.Host": "Warning",
         "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
       }
     },
@@ -20,5 +21,8 @@
         }
       }
     ]
+  },
+  "ConnectionStrings": {
+    "TestConnectSqlite": "Data Source=test.db"
   }
 }
