--- a/src/Less.DalCore/Less.DalCore.csproj
+++ b/src/Less.DalCore/Less.DalCore.csproj
@@ -4,25 +4,29 @@
     <TargetFrameworks>netstandard2.0;netstandard2.1;net6;net8</TargetFrameworks>
     <LangVersion>8.0</LangVersion>
     <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Title>Less.DalCore</Title>
+    <Authors>studylessshape</Authors>
+    <RepositoryUrl>https://github.com/studylessshape/react-with-csharp/tree/master/src/Less.DalCore</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="[2.0.0.0, 3.0.0.0)" />
-    <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="[2.0.0.0, 3.0.0.0)" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="[3.1.0.0, 5.0.0.0)" />
+      <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="3.103.9.1" />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.1'">
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="[5.0.0.0, 6.0.0.0)" />
-    <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="[5.0.0.0, 6.0.0.0)" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="[3.0.0.0, 5.0.0.0)" />
+    <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="3.103.9.1" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'net6'">
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="[7.0.0.0, 8.0.0.0)" />
-    <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="[7.0.0.0, 8.0.0.0)" />
+    <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="7.103.9.1" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'net8'">
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="[9.0.0.0, 10.0.0.0)" />
-    <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="[9.0.0.0, 10.0.0.0)" />
+    <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="9.103.9.1" />
   </ItemGroup>
 
 </Project>
