wip: update auth entity repo

--- a/src/Less.WebApi/Less.WebApi.csproj
+++ b/src/Less.WebApi/Less.WebApi.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Less.DalCore\Less.DalCore.csproj" />
+    <ProjectReference Include="..\Core\Less.Auth.Dal\Less.Auth.Dal.csproj" />
   </ItemGroup>
 
 </Project>
