--- a/src/Less.WebApi/appsettings.json
+++ b/src/Less.WebApi/appsettings.json
@@ -2,6 +2,7 @@
   "AllowedHosts": "*",
   "urls": "http://+:5000",
   "Serilog": {
+    "Using": ["Serilog.Sinks.Console", "Serilog.Sinks.File"],
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
@@ -23,6 +24,6 @@
     ]
   },
   "ConnectionStrings": {
-    "TestConnectSqlite": "Data Source=test.db"
+    "TestConnectSqlite": "Data Source=TestDb/test.db"
   }
 }
