--- a/src/Core/Less.Auth.Dal/Less.Auth.Dal.csproj
+++ b/src/Core/Less.Auth.Dal/Less.Auth.Dal.csproj
@@ -11,6 +11,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Konscious.Security.Cryptography.Argon2" Version="1.3.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Less.Auth\Less.Auth.csproj" />
     <ProjectReference Include="..\Less.DalCore\Less.DalCore.csproj" />
   </ItemGroup>
