finish login controller

--- a/src/Less.Auth.Dal/Less.Auth.Dal.csproj
+++ b/src/Less.Auth.Dal/Less.Auth.Dal.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Less.Api.Core\Less.Api.Core.csproj" />
     <ProjectReference Include="..\Less.Auth\Less.Auth.csproj" />
     <ProjectReference Include="..\Less.DalCore\Less.DalCore.csproj" />
   </ItemGroup>
