--- a/src/Less.WebApi/appsettings.json
+++ b/src/Less.WebApi/appsettings.json
@@ -24,6 +24,7 @@
     ]
   },
   "ConnectionStrings": {
-    "TestConnectSqlite": "Data Source=TestDb/test.db"
+    "TestConnectSqlite": "Data Source=TestDb/test.db",
+    "TestConnectPG": "Host=myserver;Username=mylogin;Password=mypass;Database=mydatabase"
   }
 }
