add result filter and exception filter

--- a/src/Less.Auth.WebApi/Less.Auth.WebApi.csproj
+++ b/src/Less.Auth.WebApi/Less.Auth.WebApi.csproj
@@ -5,16 +5,18 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <OutputType>Library</OutputType>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
+	<NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="8.1.4" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Less.Api.Core\Less.Api.Core.csproj" />
     <ProjectReference Include="..\Less.Auth.Dal\Less.Auth.Dal.csproj" />
     <ProjectReference Include="..\Less.DalCore\Less.DalCore.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Filter\" />
   </ItemGroup>
 
 </Project>
