--- a/src/Less.WebApi/appsettings.json
+++ b/src/Less.WebApi/appsettings.json
@@ -8,7 +8,7 @@
       "Override": {
         "Microsoft.AspNetCore.Mvc": "Warning",
         "Microsoft.AspNetCore.Routing": "Warning",
-        "Microsoft.AspNetCore.Host": "Warning",
+        "Microsoft.AspNetCore.Hosting": "Warning",
         "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
       }
     },
@@ -19,7 +19,8 @@
           "path": "./logs/log-.txt",
           "rollingInterval": "Day",
           "rollOnFileSizeLimit": true
-        }
+        },
+        "OutputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] ({SourceContext}) {Message:lj}{NewLine}{Exception}"
       }
     ]
   },
