finish login and dynamic navgation

--- a/src/Less.WebApi/appsettings.json
+++ b/src/Less.WebApi/appsettings.json
@@ -9,7 +9,8 @@
         "Microsoft.AspNetCore.Mvc": "Warning",
         "Microsoft.AspNetCore.Routing": "Warning",
         "Microsoft.AspNetCore.Hosting": "Warning",
-        "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
+        "Microsoft.EntityFrameworkCore.Database.Command": "Warning",
+        "Microsoft.AspNetCore.Cors": "Warning"
       }
     },
     "WriteTo": [
@@ -18,9 +19,9 @@
         "Args": {
           "path": "./logs/log-.txt",
           "rollingInterval": "Day",
-          "rollOnFileSizeLimit": true
-        },
-        "OutputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] ({SourceContext}) {Message:lj}{NewLine}{Exception}"
+          "rollOnFileSizeLimit": true,
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] ({SourceContext}) {Message:lj}{NewLine}{Exception}"
+        }
       }
     ]
   },
