--- a/web-client/package.json
+++ b/web-client/package.json
@@ -13,21 +13,23 @@
   "dependencies": {
     "@arco-design/theme-line": "^0.0.3",
     "@arco-design/web-react": "^2.66.2",
-    "@tanstack/react-router": "^1.128.0",
-    "@tanstack/react-router-devtools": "^1.128.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "@douyinfe/semi-ui": "^2.83.0",
+    "@tanstack/react-router": "^1.130.2",
+    "@tanstack/react-router-devtools": "^1.130.2",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "typescript-cookie": "^1.0.6",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@arco-plugins/unplugin-react": "^2.0.0-beta.5",
-    "@biomejs/biome": "2.0.6",
-    "@rsbuild/core": "^1.4.3",
-    "@rsbuild/plugin-less": "^1.2.5",
-    "@rsbuild/plugin-react": "^1.3.3",
-    "@tanstack/router-plugin": "^1.128.0",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
+    "@biomejs/biome": "2.1.2",
+    "@rsbuild/core": "^1.4.11",
+    "@rsbuild/plugin-less": "^1.3.1",
+    "@rsbuild/plugin-react": "^1.3.4",
+    "@tanstack/router-plugin": "^1.130.2",
+    "@types/react": "18.3.23",
+    "@types/react-dom": "18.3.7",
     "less": "^4.4.0",
     "less-loader": "^12.3.0",
     "typescript": "^5.8.3"
