--- a/web-client/package.json
+++ b/web-client/package.json
@@ -11,8 +11,7 @@
     "preview": "rsbuild preview"
   },
   "dependencies": {
-    "@arco-design/theme-line": "^0.0.3",
-    "@arco-design/web-react": "^2.66.2",
+    "@douyinfe/semi-icons": "^2.84.0",
     "@douyinfe/semi-ui": "^2.83.0",
     "@tanstack/react-router": "^1.130.2",
     "@tanstack/react-router-devtools": "^1.130.2",
@@ -22,7 +21,6 @@
     "zustand": "^5.0.6"
   },
   "devDependencies": {
-    "@arco-plugins/unplugin-react": "^2.0.0-beta.5",
     "@biomejs/biome": "2.1.2",
     "@rsbuild/core": "^1.4.11",
     "@rsbuild/plugin-less": "^1.3.1",
