--- a/web-client/package.json
+++ b/web-client/package.json
@@ -28,9 +28,11 @@
     "@tanstack/router-plugin": "^1.130.2",
     "@types/react": "18.3.23",
     "@types/react-dom": "18.3.7",
+    "@unocss/postcss": "^66.3.3",
     "less": "^4.4.0",
     "less-loader": "^12.3.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "unocss": "^66.3.3"
   },
   "trustedDependencies": [
     "core-js",
