--- a/src/Less.Auth.WebApi/Less.Auth.WebApi.csproj
+++ b/src/Less.Auth.WebApi/Less.Auth.WebApi.csproj
@@ -10,7 +10,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="8.1.4" />
+    <PackageReference Include="Less.Utils.Mapper" Version="1.0.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="9.0.3" />
   </ItemGroup>
 
   <ItemGroup>
