--- a/web-client/package.json
+++ b/web-client/package.json
@@ -25,6 +25,7 @@
     "@rsbuild/core": "^1.4.11",
     "@rsbuild/plugin-less": "^1.3.1",
     "@rsbuild/plugin-react": "^1.3.4",
+    "@rsbuild/plugin-svgr": "^1.2.1",
     "@tanstack/router-plugin": "^1.130.2",
     "@types/react": "18.3.23",
     "@types/react-dom": "18.3.7",
