recovery login route and set replace true when navigate to or leave login

--- a/web-client/tsconfig.json
+++ b/web-client/tsconfig.json
@@ -17,7 +17,7 @@
     /* type checking */
     "strict": true,
     "noUnusedLocals": false,
-    "noUnusedParameters": true,
+    "noUnusedParameters": false,
     "noImplicitAny": false,
   },
   "include": ["src"]
