--- a/src/Less.Auth.WebApi/Less.Auth.WebApi.csproj
+++ b/src/Less.Auth.WebApi/Less.Auth.WebApi.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\Less.DalCore\Less.DalCore.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Login\" />
+  </ItemGroup>
+
 </Project>
