--- a/src/Less.WebApi/appsettings.json
+++ b/src/Less.WebApi/appsettings.json
@@ -6,11 +6,8 @@
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
-        "Microsoft.AspNetCore.Mvc": "Warning",
-        "Microsoft.AspNetCore.Routing": "Warning",
-        "Microsoft.AspNetCore.Hosting": "Warning",
-        "Microsoft.EntityFrameworkCore.Database.Command": "Warning",
-        "Microsoft.AspNetCore.Cors": "Warning"
+        "Microsoft.AspNetCore": "Warning",
+        "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
       }
     },
     "WriteTo": [
