--- a/web-client/tsconfig.json
+++ b/web-client/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "compilerOptions": {
+    "paths": {
+      "@/*": ["./src/*"],
+      "@src/*": ["./src/*"]
+    },
     "lib": ["DOM", "ES2020"],
     "jsx": "react-jsx",
     "target": "ES2020",
@@ -18,7 +22,7 @@
     "strict": true,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "noImplicitAny": false,
+    "noImplicitAny": false
   },
   "include": ["src"]
 }
