add permission to protect button

--- a/src/Less.WebApi/appsettings.json
+++ b/src/Less.WebApi/appsettings.json
@@ -6,7 +6,12 @@
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
-        //"Microsoft.AspNetCore": "Warning",
+        "Microsoft.AspNetCore.Hosting": "Warning",
+        "Microsoft.AspNetCore.Routing": "Warning",
+        "Microsoft.AspNetCore.ResponseCaching": "Warning",
+        "Microsoft.AspNetCore.Mvc": "Warning",
+        "Microsoft.AspNetCore.Authentication": "Warning",
+        "Microsoft.AspNetCore.Cors": "Warning",
         "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
       }
     },
