--- a/src/Less.Auth.Dal/Less.Auth.Dal.csproj
+++ b/src/Less.Auth.Dal/Less.Auth.Dal.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Konscious.Security.Cryptography.Argon2" Version="1.3.1" />
+    <PackageReference Include="Less.Utils.Linq" Version="1.0.4" />
   </ItemGroup>
 
   <ItemGroup>
