wip: add role manage

--- a/src/Less.Auth/Less.Auth.csproj
+++ b/src/Less.Auth/Less.Auth.csproj
@@ -18,6 +18,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Less.Api.Core\Less.Api.Core.csproj" />
     <ProjectReference Include="..\Less.DalCore\Less.DalCore.csproj" />
+    <ProjectReference Include="..\Less.EntityFramework.Plus\Less.EntityFramework.Plus.csproj" />
   </ItemGroup>
 
 </Project>
