--- a/src/Less.WebApi/Less.WebApi.csproj
+++ b/src/Less.WebApi/Less.WebApi.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Controllers\" />
     <Folder Include="TestDb\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
