--- a/src/Less.WebApi/appsettings.json
+++ b/src/Less.WebApi/appsettings.json
@@ -17,6 +17,12 @@
     },
     "WriteTo": [
       {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3} ({SourceContext})] {Message:lj}{NewLine}{Exception}"
+        }
+      },
+      {
         "Name": "File",
         "Args": {
           "path": "./logs/log-.txt",
