add map fallback to support single page app

--- a/src/Less.WebApi/appsettings.json
+++ b/src/Less.WebApi/appsettings.json
@@ -6,12 +6,7 @@
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
-        "Microsoft.AspNetCore.Hosting": "Warning",
-        "Microsoft.AspNetCore.Routing": "Warning",
-        "Microsoft.AspNetCore.ResponseCaching": "Warning",
-        "Microsoft.AspNetCore.Mvc": "Warning",
-        "Microsoft.AspNetCore.Authentication": "Warning",
-        "Microsoft.AspNetCore.Cors": "Warning",
+        "Microsoft.AspNetCore": "Warning",
         "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
       }
     },
