--- a/src/Less.WebApi/appsettings.json
+++ b/src/Less.WebApi/appsettings.json
@@ -2,7 +2,7 @@
   "AllowedHosts": "*",
   "urls": "http://+:5000",
   "Serilog": {
-    "Using": ["Serilog.Sinks.Console", "Serilog.Sinks.File"],
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
@@ -31,5 +31,8 @@
   "ConnectionStrings": {
     "TestConnectSqlite": "Data Source=TestDb/test.db",
     "TestConnectPG": "Host=myserver;Username=mylogin;Password=mypass;Database=mydatabase"
+  },
+  "FallbackToDefaultOptions": {
+    "NotFallbackPatterns": [ "/api" ]
   }
 }
