--- a/src/Less.Auth/Less.Auth.csproj
+++ b/src/Less.Auth/Less.Auth.csproj
@@ -13,6 +13,7 @@
     <ItemGroup>
 		<PackageReference Include="Konscious.Security.Cryptography.Argon2" Version="1.3.1" />
 		<PackageReference Include="Less.Utils.ResultExtensions" Version="1.0.4" />
+		<PackageReference Include="UUID" Version="1.1.1" />
 	</ItemGroup>
 	
   <ItemGroup>
