--- a/src/Less.Auth.WebApi/Less.Auth.WebApi.csproj
+++ b/src/Less.Auth.WebApi/Less.Auth.WebApi.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="9.0.3" />
+    <PackageReference Include="UUID.Serialization.System" Version="1.1.1" />
   </ItemGroup>
 
   <ItemGroup>
