--- a/.gitignore
+++ b/.gitignore
@@ -367,3 +367,4 @@ appsettings.*.json
 src/**/TestDb/
 src/**/wwwroot/
 mobile-client/src-tauri/gen/android/keystore.properties
+/mobile-client/src-tauri/gen/android/keystore.properties
