--- a/mobile-client/package.json
+++ b/mobile-client/package.json
@@ -18,10 +18,12 @@
     "@tanstack/react-router": "^1.131.32",
     "@tanstack/react-router-devtools": "^1.131.32",
     "@tauri-apps/api": "^2.8.0",
+    "@tauri-apps/plugin-log": "~2",
     "@tauri-apps/plugin-opener": "^2.5.0",
     "react": "^18",
     "react-dom": "^18",
-    "yoga-layout": "^3.2.1"
+    "yoga-layout": "^3.2.1",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@tanstack/router-plugin": "^1.131.32",
