--- a/mobile-client/package.json
+++ b/mobile-client/package.json
@@ -15,12 +15,17 @@
     "@blueprintjs/icons": "^6.1.0",
     "@blueprintjs/select": "^6.0.3",
     "@blueprintjs/table": "^6.0.3",
+    "@fluentui/react-components": "^9.69.0",
+    "@lit/react": "^1.0.8",
     "@tanstack/react-router": "^1.131.32",
     "@tanstack/react-router-devtools": "^1.131.32",
     "@tauri-apps/api": "^2.8.0",
     "@tauri-apps/plugin-log": "~2",
     "@tauri-apps/plugin-opener": "^2.5.0",
     "@tauri-apps/plugin-os": "^2.3.1",
+    "antd-mobile": "^5.41.0-alpha.3",
+    "antd-mobile-icons": "^0.3.0",
+    "normalize.css": "^8.0.1",
     "react": "^18",
     "react-dom": "^18",
     "yoga-layout": "^3.2.1",
@@ -33,8 +38,10 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@vitejs/plugin-react": "^5.0.2",
+    "less": "^4.4.1",
     "typescript": "~5.9.2",
     "unocss": "^66.5.0",
-    "vite": "^7.1.4"
+    "vite": "^7.1.4",
+    "vite-plugin-importer": "^0.2.5"
   }
 }
