--- a/mobile-client/package.json
+++ b/mobile-client/package.json
@@ -10,12 +10,7 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@blueprintjs/core": "^6.2.1",
-    "@blueprintjs/datetime": "^6.0.3",
-    "@blueprintjs/icons": "^6.1.0",
-    "@blueprintjs/select": "^6.0.3",
-    "@blueprintjs/table": "^6.0.3",
-    "@fluentui/react-components": "^9.69.0",
+    "@less/mdui-react": "link:..\\mdui-react",
     "@lit/react": "^1.0.8",
     "@tanstack/react-router": "^1.131.32",
     "@tanstack/react-router-devtools": "^1.131.32",
@@ -25,6 +20,7 @@
     "@tauri-apps/plugin-os": "^2.3.1",
     "antd-mobile": "^5.41.0-alpha.3",
     "antd-mobile-icons": "^0.3.0",
+    "material-icons": "^1.13.14",
     "normalize.css": "^8.0.1",
     "react": "^18",
     "react-dom": "^18",
