change route to component tab

--- a/mobile-client/package.json
+++ b/mobile-client/package.json
@@ -18,8 +18,8 @@
     "@tauri-apps/plugin-log": "~2",
     "@tauri-apps/plugin-opener": "^2.5.0",
     "@tauri-apps/plugin-os": "^2.3.1",
+    "@unocss/reset": "^66.5.1",
     "material-icons": "^1.13.14",
-    "normalize.css": "^8.0.1",
     "react": "^18",
     "react-dom": "^18",
     "yoga-layout": "^3.2.1",
